Added JUnit testing framework and baseline test so that hopefully we do better this season lmao
Signed-off-by: Yaseen Shaikh <yaseen.nvt@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id "java"
     id "eclipse"
     id "edu.wpi.first.GradleRIO" version "2019.0.0-alpha-3"
+    id "com.snobot.simulator.plugin.SnobotSimulatorPlugin" version "2018.05.23"// Should point to the latest version at https://login.gradle.org/plugin/com.snobot.simulator.plugin.SnobotSimulatorPlugin
 }
 
 def ROBOT_CLASS = "org.usfirst.frc.team1683.robot.Robot"
@@ -33,7 +34,17 @@ dependencies {
     compile wpilib()
     compile ctre()
     compile navx()
+    testCompile snobotSimCompile()
+    // testing libraries
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
 }
+
+// required for unit testing testing 
+test {
+    useJUnitPlatform()
+}
+
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
 // in order to make them all available at runtime. Also adding the manifest so WPILib
